# SimpleFileLocker

./: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  SimpleFileLocker.csproj  packages.config
Locker/: RustLib.cs
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Properties/PublishProfiles/: FolderProfile.pubxml
RustCode/: Cargo.toml
RustCode/src/: lib.rs
