[package]
name = "simple_file_locker"
version = "1.0.3"
edition = "2024"

[dependencies]
ring = "0.17.14"

[lib]
name = "simple_file_locker"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3          # 최대 최적화 (0~3)
lto = true             # 링크 타임 최적화 (바이너리 크기 감소 및 속도 향상)
codegen-units = 1      # 코드 생성 단위를 1로 제한 (더 나은 최적화 가능)
panic = "abort"        # 패닉 발생 시 스택 추적을 하지 않고 즉시 종료 (DLL 크기 최적화)
strip = true